devtools/tests/should_fail/multiple_subst.p
fof(sigma0, substitution, { Y -> d }, inner).
fof(sigma1, substitution, { X -> c }, outer).
